# max

./: .gitmodules  CMakeLists.txt  annotated.html  annotated_dup.js  assert_8h_source.html  board_8h.html  board_8h.js  board_8h_source.html  capturelist_8h.html  capturelist_8h.js  capturelist_8h_source.html  classes.html  def_8h.html  def_8h.js  def_8h_source.html  dir_0639ad22bd46af5c547b3e49244c59f4.html  dir_0639ad22bd46af5c547b3e49244c59f4.js  dir_2052808828190f934b76e979ee65af8a.html  dir_21b420431751a377959072e07cef13e2.html  dir_21b420431751a377959072e07cef13e2.js  dir_4658ea940bfb6114d3c915bd6788b070.html  dir_49a36b7d1361171df73bd9e36daf3bb4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8ce7cd6e96eb11a61d1d013aa8c7fa46.html  dir_8f0d70e7ec8c85f8511388cb515e479c.html  dir_8h.html  dir_8h.js  dir_8h_source.html  dir_d0f0db5746f4a20d582d51a7ea6c2803.html  dir_d0f0db5746f4a20d582d51a7ea6c2803.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d85a9885fedb28c72aaa7c917377610f.html  dir_e7f20fa9f3cb81c748c07233990671d3.html  dir_e7f20fa9f3cb81c748c07233990671d3.js  dir_f68ba2f8d23282d65f2a91bb33ecadc4.html  dir_f68ba2f8d23282d65f2a91bb33ecadc4.js  doxygen_crawl.html  engine_8h_source.html  eval_8h.html  (+152 more)
.github/workflows/: cmake-multi-platform.yml  deploy-github-pages.yml
arena/: CMakeLists.txt
arena/img/: convert.sh
arena/include/: gui.h
arena/include/img/: B.h  K.h  N.h  P.h  Q.h  R.h  b.h  bb.h  bk.h  bn.h  bp.h  bq.h  br.h  k.h  marble.h  n.h  p.h  q.h  r.h  wb.h  wk.h  wn.h  wood.h  wp.h  wq.h  wr.h
arena/src/: gui.c  main.c  textures.c  thread.c
cmake/: Doxyfile.cmake.in  DoxygenLayout.xml
include/: max.h
include/max/: assert.h  board.h  def.h  engine.h  fen.h  move.h  piece.h  square.h  square.inc  uci.h
include/max/board/: board.h  capturelist.h  dir.h  fen.h  loc.h  move.h  movegen.h  op.h  perft.h  piece.h  piececode.h  piecelist.h  side.h  square.h  squares.h  state.h  zobrist.h
include/max/board/movegen/: king.h  pawn.h
include/max/engine/: engine.h  param.h  score.h  tt.h
include/max/engine/eval/: eval.h  material.h  param.h  pstbl.h  strategy.h
include/max/engine/param/: pieceval.h  pstbl.h
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  functions_0.js  groups_1.js  groups_11.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  (+29 more)
src/: board.c  check.c  debug.c  fen.c  init.c  lib.c  move.c  movegen.c  private.h  square.c  valid.c
src/board/: board.c  debug.c  dir.c  fen.c  init.c  legal.c  loc.c  move.c  movegen.c  perft.c  piececode.c  piecelist.c  private.h  square.c  state.c  zobrist.c
src/board/movegen/: king.c  knight.c  movegen.c  movegen.h  pawn.c  pawn.h  slide.c  slider.h
src/board/movemake/: check.c  move.c  valid.c
src/board/test/: check.c  legality.c  perft.c
src/board/update/: check.c  make.c  move.c  unmake.c  update.h  valid.c
src/engine/: engine.c  eval.c  order.c  private.h  score.c  search.c  tt.c
src/engine/eval/: eval.c  strategy.c
src/include/private/: max.h  max_assert.h  test.h
src/include/private/board/: board.h  capturelist.h  dir.h  loc.h  move.h  movegen.h  piececode.h  piecelist.h  state.h  zobrist.h
src/include/private/board/movegen/: king.h  knight.h  pawn.h  slide.h
src/include/private/engine/: engine.h  eval.h  search.h  tt.h
src/include/private/engine/eval/: strategy.h
src/movegen/: movegen.c  pawn.c  pawn.h  slider.h
tests/: board-test.c  checkmate.pgn  engine-test.c  test.c  test.h
